fix: Removes horizontal scrolling

--- a/src/styles/partials/_common.scss
+++ b/src/styles/partials/_common.scss
@@ -9,7 +9,7 @@
 
   &-block {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
   }
 
   &-center {
